<resources>
    <string name="app_name">ESPTimer</string>
    <string name="timer_control">Timer Control</string>
    <string name="main_activity">Main Activity</string>
    <string name="enter_4_digit_number">Enter 4 digit number</string>
    <string name="countdown">CountDown</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_5_min">5 min</string>
    <string name="_10_min">10 min</string>
    <string name="_1_min">1 min</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="_3_connect_to_wifi">3. Connect to WiFi</string>
    <string name="_2_enter_wifi_credentials">2. Enter WiFi credentials</string>
    <string name="_1_connect_to_esptimer_wifi">1. Connect to ESPTimer WiFi</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="top_app_bar">Title</string>
    <string name="settings">Settings</string>
    <string name="header_icon_description">Control your 7 Segment Display</string>
    <string name="wi_fi_connect">Wi-Fi Connect</string>
    <string name="toggle_button_label">stopwatch/countdown</string>
    <string name="wifi_connect">WiFi</string>
    <string name="app_version">v0.0.1</string>
    <string name="esp_info">esp32</string>
    <string name="connected_wifi">Wifi</string>
    <string name="project_link">https://github.com/antoinebou12/ESP32-7SEG</string>
    <string name="web_browser">Web Browser</string>
    <string name="_00_00">00:00</string>
    <string name="channel_id">timer</string>
    <string name="channel_name">notification\n</string>
    <string name="channel_description">notification timer</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pause">Pause</string>
    <string name="connect_to_esptimer_wifi">1. Connect to ESPTimer Wi-Fi</string>
    <string name="select_wifi_network">Select Wi-Fi Network</string>
    <string name="enter_wifi_password">Enter Wi-Fi Password</string>
    <string name="connect">Connect</string>
    <string name="reset_wifi">Reset Wi-Fi</string>
</resources>